# powermgr_battery_manager

./: OAT.xml  README.en.md  README.md  README_zh.md  battery.yaml  batterymgr.gni  batterymgr.yaml  bundle.json  ohos.build
charger/: BUILD.gn
charger/backlight/: battery_backlight.cpp  battery_backlight.h
charger/include/: animation_config.h  battery_backlight.h  battery_config.h  battery_led.h  battery_thread.h  battery_vibrate.h  batteryd_api.h  charger_animation.h  charger_graphic_engine.h  charger_log.h  charger_thread.h  power_supply_provider.h
charger/include/dev/: display_drv.h  drm_driver.h  fbdev_driver.h  graphic_dev.h
charger/led/: battery_led.cpp  battery_led.h
charger/resources/: BUILD.gn  device.charge.group.cfg  init.charger.cfg
charger/sa_profile/: BUILD.gn  animation.json  battery_config.json  led_config.json
charger/src/: animation_config.cpp  battery_backlight.cpp  battery_config.cpp  battery_led.cpp  battery_thread.cpp  battery_vibrate.cpp  charger.cpp  charger_animation.cpp  charger_graphic_engine.cpp  charger_thread.cpp  power_supply_provider.cpp
charger/src/dev/: drm_driver.cpp  fbdev_driver.cpp  graphic_dev.cpp
charger/test/: BUILD.gn
charger/test/systemtest/: BUID.gn
charger/ui/: BUILD.gn
charger/ui/include/: animation_label.h  error_code.h  frame.h  log.h  surface_dev.h  text_label.h  updater_ui.h  view.h
charger/ui/src/: animation_label.cpp  frame.cpp  surface_dev.cpp  text_label.cpp  updater_ui.cpp  view.cpp
charger/vibrate/: battery_vibrate.cpp  battery_vibrate.h
frameworks/: BUILD.gn
frameworks/ani/: BUILD.gn  arktsconfig.json  battery_ani.cpp
frameworks/ani/battery_info/: BUILD.gn
frameworks/ani/ets/: @ohos.batteryInfo.ets
frameworks/capi/: BUILD.gn
frameworks/capi/battery_info/: ohbattery_info.cpp
frameworks/cj/: BUILD.gn
frameworks/cj/include/: battery_info_ffi.h
frameworks/cj/src/: battery_info_ffi.cpp
frameworks/ets/taihe/: BUILD.gn
frameworks/js/napi/: BUILD.gn  battery_info.cpp  battery_info.cpp.rej  charger.cpp  system_battery.cpp  system_battery.h
frameworks/js/test/: BUILD.gn  battery_unit.test.js
frameworks/napi/: BUILD.gn  battery_info.cpp  napi_utils.cpp  system_battery.cpp  system_battery.h
frameworks/napi/include/: napi_error.h  system_battery.h
frameworks/napi/src/: battery_info.cpp  napi_error.cpp  system_battery.cpp
frameworks/native/src/: battery_srv_client.cpp
hdi/service/: BUILD.gn
hdi/service/include/: battery_config.h  battery_host_service_stub.h  battery_thread.h  batteryd.h  batteryd_dispatcher.h  batteryd_parser.h  batteryd_publisher.h  power_supply_provider.h
hdi/service/src/: battery_config.cpp  battery_host_service_stub.cpp  battery_thread.cpp  batteryd.c  batteryd.cpp  batteryd_dispatcher.c  batteryd_parser.c  batteryd_publisher.c  power_supply_provider.cpp
hdi/service/test/: BUILD.gn
hdi/test/moduletest/: BUILD.gn
interfaces/inner_api/: BUILD.gn
interfaces/innerkits/: BUILD.gn
services/: BUILD.gn
services/native/include/: battery_callback.h  battery_config.h  battery_dump.h  battery_light.h  battery_notify.h  battery_service.h  battery_service_event_handler.h  battery_service_subscriber.h  batterysrv_event_handler.h  charging_sound.h  hdi_service_status_listener.h
services/native/notification/: button_event.cpp  button_event.h  ibattery_notification.h  notification_center.cpp  notification_center.h  notification_decorator.cpp  notification_decorator.h  notification_locale.cpp  notification_locale.h  notification_manager.cpp  notification_manager.h
services/native/profile/: BUILD.gn  battery_config.json
services/native/resources/: BUILD.gn  locale_path.json
services/native/src/: battery_callback.cpp  battery_config.cpp  battery_dump.cpp  battery_light.cpp  battery_notify.cpp  battery_service.cpp  battery_service_event_handler.cpp  battery_service_subscriber.cpp  batterysrv_event_handler.cpp  charging_sound.cpp
services/native/test/: BUILD.gn
services/zidl/: BUILD.gn  IBatterySrv.idl  ibattery_srv.zidl
services/zidl/include/: battery_srv_proxy.h  battery_srv_stub.h
services/zidl/src/: battery_srv_proxy.cpp  battery_srv_stub.cpp
test/apitest/capi/: BUILD.gn  ohbattery_info_test.cpp  test.c
test/apitest/cj/: BUILD.gn  battery_info_ffi_test.cpp  battery_info_ffi_test.h
test/fuzztest/: BUILD.gn
test/fuzztest/battery_fuzzer/: BUILD.gn  battery_fuzzer_test.cpp  battery_fuzzer_test.h  project.xml
test/fuzztest/battery_utils/: battery_fuzzer_test.cpp  battery_fuzzer_test.h
test/fuzztest/batteryservice_fuzzer/: BUILD.gn  batteryservice_fuzzer_test.cpp
test/fuzztest/getbatteryconfig_fuzzer/: BUILD.gn  getbatteryconfig_fuzzer_test.cpp
test/fuzztest/getbatterytemperature_fuzzer/: BUILD.gn  getbatterytemperature_fuzzer_test.cpp
test/fuzztest/getcapacity_fuzzer/: BUILD.gn  getcapacity_fuzzer_test.cpp
test/fuzztest/getcapacitylevel_fuzzer/: BUILD.gn  getcapacitylevel_fuzzer_test.cpp
test/fuzztest/getchargingstatus_fuzzer/: BUILD.gn  getchargingstatus_fuzzer_test.cpp
test/fuzztest/getcurrentaverage_fuzzer/: BUILD.gn  getcurrentaverage_fuzzer_test.cpp
test/fuzztest/gethealthstatus_fuzzer/: BUILD.gn  gethealthstatus_fuzzer_test.cpp
test/fuzztest/getnowcurrent_fuzzer/: BUILD.gn  getnowcurrent_fuzzer_test.cpp
test/fuzztest/getpluggedtype_fuzzer/: BUILD.gn  getpluggedtype_fuzzer_test.cpp
test/fuzztest/getpresent_fuzzer/: BUILD.gn  getpresent_fuzzer_test.cpp
test/fuzztest/getremainenergy_fuzzer/: BUILD.gn  getremainenergy_fuzzer_test.cpp
test/fuzztest/getremainingchargetime_fuzzer/: BUILD.gn  getremainingchargetime_fuzzer_test.cpp
test/fuzztest/gettechnology_fuzzer/: BUILD.gn  gettechnology_fuzzer_test.cpp
test/fuzztest/gettotalenergy_fuzzer/: BUILD.gn  gettotalenergy_fuzzer_test.cpp
test/systemtest/: BUILD.gn
test/unittest/: BUILD.gn
tools/: BUILD.gn
tools/ohos-battery-manager/: BUILD.gn  config.json  ohos-battery-manager_report.md  res-00-double-validation.md
tools/ohos-batteryManager/: BUILD.gn  config.json  ohos-batteryManager.json  ohos-batteryManager_report.md
utils/hookmgr/: BUILD.gn
(+224 files in other folders)
