# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

aafwk_inner_api_path =
    "//foundation/ability/ability_runtime/interfaces/innerkits"

aafwk_services_path = "//foundation/ability/ability_runtime/services"

batterymgr_native_part_name = "battery_manager_native"

battery_manager_path = "//base/powermgr/battery_manager"

utils_path = "${battery_manager_path}/utils"
