# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/battery_manager/batterymgr.gni")
import("//build/ohos.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")

config("batteryd_private_config") {
  include_dirs = [
    "//drivers/ability/sbuf/include",
    "//drivers/framework/include",
    "//drivers/framework/include/core",
  ]
}

config("batteryd_public_config") {
  include_dirs = [
    "include",
    "${battery_manager_path}/hdi/api/include",
    "//third_party/jsoncpp/include",
    "//base/startup/syspara_lite/adapter/native/syspara/include",
    "//base/powermgr/battery_manager/charger/ui/include",
    "//base/powermgr/battery_manager/charger/vibrate",
    "//base/powermgr/battery_manager/charger/backlight",
    "//base/powermgr/battery_manager/charger/led",
    "//drivers/peripheral/input/interfaces/include",
    "//third_party/libpng",
  ]
}

ohos_executable("charger") {
  install_enable = true
  sources = [
    "backlight/battery_backlight.cpp",
    "led/battery_led.cpp",
    "src/charger.cpp",
    "src/charger_thread.cpp",
    "ui/src/updater_ui.cpp",
    "vibrate/battery_vibrate.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":batteryd_private_config",
  ]

  public_configs = [ ":batteryd_public_config" ]

  deps = [
    "${hdf_uhdf_path}/host:libhdf_host",
    "${hdf_uhdf_path}/ipc:libhdf_ipc_adapter",
    "${hdf_uhdf_path}/utils:libhdf_utils",
    "//base/powermgr/battery_manager/charger/ui:libminui",
    "//base/powermgr/battery_manager/hdi/service:batteryd",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  part_name = "battery_manager_native"
}

group("charger_group") {
  deps = [ ":charger" ]
}

group("led_service") {
  deps = [ "sa_profile:led_config" ]
}

group("resources_service") {
  deps = [
    "resources:resources_config",
    "resources:resources_config1",
    "resources:resources_config10",
    "resources:resources_config11",
    "resources:resources_config12",
    "resources:resources_config13",
    "resources:resources_config14",
    "resources:resources_config15",
    "resources:resources_config16",
    "resources:resources_config17",
    "resources:resources_config18",
    "resources:resources_config19",
    "resources:resources_config2",
    "resources:resources_config20",
    "resources:resources_config21",
    "resources:resources_config22",
    "resources:resources_config23",
    "resources:resources_config24",
    "resources:resources_config25",
    "resources:resources_config26",
    "resources:resources_config27",
    "resources:resources_config28",
    "resources:resources_config29",
    "resources:resources_config3",
    "resources:resources_config30",
    "resources:resources_config31",
    "resources:resources_config32",
    "resources:resources_config33",
    "resources:resources_config34",
    "resources:resources_config35",
    "resources:resources_config36",
    "resources:resources_config37",
    "resources:resources_config38",
    "resources:resources_config39",
    "resources:resources_config4",
    "resources:resources_config40",
    "resources:resources_config41",
    "resources:resources_config42",
    "resources:resources_config43",
    "resources:resources_config44",
    "resources:resources_config45",
    "resources:resources_config46",
    "resources:resources_config47",
    "resources:resources_config48",
    "resources:resources_config49",
    "resources:resources_config5",
    "resources:resources_config50",
    "resources:resources_config51",
    "resources:resources_config52",
    "resources:resources_config53",
    "resources:resources_config54",
    "resources:resources_config55",
    "resources:resources_config56",
    "resources:resources_config57",
    "resources:resources_config58",
    "resources:resources_config59",
    "resources:resources_config6",
    "resources:resources_config60",
    "resources:resources_config61",
    "resources:resources_config62",
    "resources:resources_config63",
    "resources:resources_config64",
    "resources:resources_config65",
    "resources:resources_config7",
    "resources:resources_config8",
    "resources:resources_config9",
  ]
}
