# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//base/powermgr/battery_manager/batterymgr.gni")

group("cli_tool_group") {
  if (battery_manager_feature_support_battery_cli) {
    deps = [ "ohos-batteryManager:ohos-batteryManager" ]
  }
}

group("cli_test_group") {
  testonly = true
  if (battery_manager_feature_support_battery_cli) {
    deps = [ "ohos-batteryManager/tests:test_ohos_battery_manager_cli" ]
  }
}
